Basic Prototype Finished
Pull the repo and open index.html to see

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 			<button type="button" id="NewDest">Get New Destination</button>
 		</p>
 		<p id="Dest"></p>
+		<p id="Pay"></p>
 	</body>
 </html>
