--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	</head>
 
 	<body>
-		<p>
-			<select id="StartList"></select>
-			<select id="EndList">
-					<option>Random</option>
-			</select>
-			<br/>
+		<p id="Start">
+			<select id="Initial"></select>
+			<button type="button" id="Go">Go</button>
 		</p>
 		<p>
-			<button type="button" id="SetFeatures">Get Payout</button>
-			<button type="button" id="NewDest">Get New Destination</button>
+			<select id="StartList" hidden></select>
+			<select id="EndList" hidden></select>
+		</p>
+		<p>
+			<button type="button" id="SetFeatures" hidden>Get Payout</button>
+			<button type="button" id="NewDest" hidden>Get New Destination</button>
 		</p>
 		<p id="Dest"></p>
 		<p id="Pay"></p>
