Multiple Player Tracking Functioning
Completed setup of auto generation for multiple players. Now need to
pretty it up.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 			<select id="Initial"></select>
 			<button type="button" id="Go">Go</button>
 		</p>
+		<p id="Body">
+		</p>
 		<p>
 			<select id="StartList" hidden></select>
 			<select id="EndList" hidden></select>
