--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<script src="src/jquery-3.2.1.min.js" type="text/javascript"></script>
 		<script src="src/baron-generator.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="src/style.css">
 	</head>
 
 	<body>
